Fixed loading/saving TZX as Standard tape on Jupiter Ace
Fixed ejecting Spectravideo cartridge
Fixed segfault pressing F5 after pressing pause key
Fixed bug on OSD Adventure Keyboard when words of 5 characters lenght and setting sending final space enabled
Fixed crash when saving configuration file larger than 20kb
Fixed crash when browsing on a completely empty directory

Fixed ZX Vision:
-Fixed hang when pressing cursor up/down on any tabbed menu with only one line (like Audio Waveform)
-Fixed glitches resizing some windows: AY Registers, Debug CPU, etc...
-Fixed flickering when resizing Keyboard Help window
-Fixed reducing all windows
-Fixed bug restoring windows on startup when a previous error was generated
-Fixed drawing scroll bars when window is not at the top of all windows
-Fixed drawing close button on background windows
-Fixed showing input tape insert state on menu and zx desktop icon when tape can't be opened
-Fixed window Hex Editor while moving or resizing
-Fixed view sensors when clicking on the scroll bars
-Fixed refreshing Visual Real Tape window when Top Speed condition


Some other minor bugfixes and improvements



Version 10.0 - Clive Sinclair edition. 4 October 2021

There are lots of changes in this version, but some of them are remarkable:

- New machine emulated: Sega Master System
- "Time machine" features: Automatic Snapshots to RAM + Rewind feature, backwards debugging, backwards run
- Realtime translation of text adventure games in a ZEsarUX window
- Can render any image from a Speccy Text Adventure (supported parsers: Quill, Paws, Daad, Gac)
- Added Visual Real Tape. Now you can have an audio render of your tape, see tape blocks and rewind or move forward the cassette player 
- Can now browse Basic variables on ZX Spectrum, ZX81 and ZX80
- Allow customize upper buttons to actions
- Added Window View Sensors to graph internal emulation sensors, performance, statistics, etc